Fixed stats on mobile devices

--- a/public/css/phone.less
+++ b/public/css/phone.less
@@ -424,7 +424,7 @@ h2{
 /* -----  Style for Stats ----- */
 .chart{
   width: 100%; 
-  height: 200px;
+  height: 300px;
 }
 .stats{
   .tab-content{
@@ -444,7 +444,15 @@ h2{
     margin-bottom: 5px;
     
    }
+   
 }
+.nav-tabs>li{
+     background-color: #ccc;
+     width: 100%;
+   }
+   .nav-tabs>.active>a, .nav-tabs>li>a, .nav-tabs>.active>a:hover{
+     border:none;
+   }
 .nav-tabs{
   margin-bottom:0;
 }
